--- a/css/main.scss
+++ b/css/main.scss
@@ -1,141 +1,116 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
-}
-
-.container {
-    width: 100%;
-    min-height: 100vh;
-    padding-left: 8%;
-    padding-right: 8%;
-    box-sizing: border-box;
     overflow: hidden;
 }
-.navbar {
-    width: 100%;
-    display: flex;
-    align-items: center;
-}
-.logo {
-    width: 50px;
-    cursor: pointer;
-    margin: 30px 0;
-}
-.menu {
-    width: 25px;
-    cursor: pointer;
-    display: none;
-}
-nav {
-    flex: 1;
-    text-align: right;
-}
-nav > ul > li {
-    list-style: none;
-    display: inline-block;
-    margin-right: 30px;
-}
-nav > ul > li > a {
-    text-decoration: none;
-    color: #000;
-    font-size: 14px;
-}
-nav > ul > li > a:hover {
-    color: #ff5ea2
-}
-.row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 100px 0;
-}
-.col-1 {
-    flex-basis: 40%;
-    position: relative;
-    margin-left: 50px;
-}
-.col-1 h2 {
-    font-size: 54px;
-}
-.col-1 h3 {
-    font-size: 30px;
-    color: #707070;
-    font-weight: 100;
-    margin: 20px 0 10px;
-}
-.col-1 p {
-    font-size: 16px;
-    color: #b7b7b7;
-    font-weight: 100;
-}
-.col-1 h4 {
-    margin: 30px 0;
-    font-size: 20px;
-}
-button {
-    width: 140px;
-    border: 0;
-    padding: 12px 10px;
-    outline: none; 
-    color: #fff;
-    background: linear-gradient(to right, #fb5283, #ff3527);
-    border-radius: 6px;
-    cursor: pointer;
-}
-.col-1::after {
-    content: '';
-    width: 10px;
-    height: 57%;
-    background: linear-gradient(#ff469f, #ff6062);
-    position: absolute;
-    left: -40px;
-    top: 8px;
+
+body {
+    background-color: black;
+    font-family: 'Oxygen', sans-serif;
 }
 
-.col-2 {
-    position: relative;
-    flex-basis: 60%;
-    display: flex;
-    align-items: center;
-}
-.col-2 .big-logo {
-    width: 70%;
-}
-.color-box {
+#background-container {
     position: absolute;
-    right: 0;
-    top: 0;
-    background: linear-gradient(#ff469f, #ff6062);
-    border-radius: 20px 0 0 20px;
     height: 100%;
-    width: 80%;
-    z-index: -1;
-    transform: translateX(150px);
+    width: 100%;
+    object-fit: fill;
+
+    & img {
+        height: 100%;
+        width: 100%;
+    }
+
+    & .red-background {
+        opacity: 0;
+        margin: 0;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        background: linear-gradient(130deg, rgba(172, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.5) 100%);
+        -webkit-backdrop-filter: blur(2.5px);
+        backdrop-filter: blur(2.5px);
+    }
+
+    & .black-background {
+        opacity: 0;
+        margin: 0;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        background: linear-gradient(112deg, rgba(5, 5, 5, 0.90) 0%, rgba(15, 15, 15, 0.80) 32%, rgba(18, 18, 18, 0.55) 57%, rgba(24, 24, 24, 0.6) 76%, rgba(43, 43, 43, 0.2) 100%);
+        -webkit-backdrop-filter: blur(1px);
+        backdrop-filter: blur(1px);
+    }
 }
 
-@media only screen and (max-width:700px) {
-    nav ul{
-        width: 100%;
-        background: linear-gradient(#ff469f, #ff6062);
-        position: absolute;
-        top: 75px;
-        right: 0;
-        z-index: 2;
-    }
-    nav ul li{
-        display: block;
+#navigation-container {
+    display: none;
+    z-index: 10;
+    position: absolute;
+    height: 100px;
+    width: 100%;
+    overflow: hidden;
+    -webkit-backdrop-filter: blur(25px);
+    backdrop-filter: blur(25px);
+    border-bottom: 2px solid rgba(48, 48, 48, 0.3137254902);
+    top: 0;
+    border-radius: 0px 0px 0px 20px;
+    z-index: 30;
+    & #content {
         margin-top: 10px;
-        margin-bottom: 10px;
+        height: 70px;
+        width: 100%;
+        padding: 2px 0 2px 30px;
+        & #trademark {
+            position: absolute;
+            width: 550px;
+            & #logo {
+                margin-top: 3px;
+                height: 64px;
+                width: 64px;
+                border-radius: 90%;
+            }
+            & #text {
+                left: 75px;
+                position: absolute;
+                color: #fff;
+                font-weight: 800;
+                font-size: 50px;
+            }
+        }
     }
-    nav ul li a{
-        color: #fff
-    }
-    .menu {
-        display: block;
-    }
-    #menuList {
-        overflow: hidden;
-        transition: 0.5s;
-    }
+}
+
+#content-container {
+    display: none;
+    position: absolute;
+    overflow-y: scroll;
+    height: 80%;
+    width: 100%;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    & #content {
+        padding-left: 40px;
+    } 
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #141414;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #494949;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #0ca1ed;
 }
