Commit 4: Making way with Mobile!
Started work on mobile support and adding features

--- a/css/test.css
+++ b/css/test.css
@@ -155,4 +155,4 @@ button {
     overflow: hidden;
     transition: 0.5s;
   }
-}/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=test.css.map */
