--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 body {
@@ -78,6 +81,12 @@ body {
   font-weight: 800;
   font-size: 50px;
 }
+#navigation-container #content #trademark #text span {
+  text-align: center;
+}
+#navigation-container #content #mobile-container {
+  display: none;
+}
 
 #content-container {
   display: none;
@@ -88,10 +97,66 @@ body {
   padding-top: 100px;
   padding-bottom: 100px;
 }
+#content-container #mobile-container {
+  display: none;
+}
 #content-container #content {
   padding-left: 40px;
 }
 
+@media only screen and (max-width: 700px) {
+  h1 {
+    font-size: 30px;
+  }
+  p {
+    font-size: 10px;
+  }
+  #content-container {
+    display: block;
+    padding-top: 60px;
+  }
+  #content-container #content {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  #background-container #BGG1 {
+    opacity: 1;
+  }
+  #background-container #BGG2 {
+    opacity: 1;
+  }
+  #background-container img {
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  #navigation-container {
+    display: block;
+    height: 50px;
+  }
+  #navigation-container #content {
+    padding: 2px 0 2px 10px;
+  }
+  #navigation-container #content #trademark {
+    max-width: 55%;
+  }
+  #navigation-container #content #trademark #logo {
+    margin-top: 0px;
+    height: 32px;
+    width: 32px;
+  }
+  #navigation-container #content #trademark #text {
+    left: 35px;
+    font-size: 20px;
+  }
+  #navigation-container #content #mobile-container {
+    display: block;
+  }
+  #navigation-container #content #mobile-container #toggle {
+    position: absolute;
+    float: right;
+    right: 20px;
+  }
+}
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
