--- a/css/main.scss
+++ b/css/main.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
+    user-select: none;
 }
 
 body {
@@ -71,12 +72,19 @@ body {
                 border-radius: 90%;
             }
             & #text {
+                //top: 12px;
                 left: 75px;
                 position: absolute;
                 color: #fff;
                 font-weight: 800;
                 font-size: 50px;
+                & span {
+                    text-align: center;
+                }
             }
+        }
+        & #mobile-container {
+            display: none;
         }
     }
 }
@@ -89,9 +97,47 @@ body {
     width: 100%;
     padding-top: 100px;
     padding-bottom: 100px;
+    & #mobile-container {
+        display: none;
+    }
     & #content {
         padding-left: 40px;
     } 
+}
+
+@media only screen and (max-width:700px) {
+    h1 { font-size: 30px; }
+    p { font-size: 10px; }
+    #content-container {
+        display: block;
+        padding-top: 60px;
+        & #content { padding-left: 10px; padding-right: 10px; }
+    }
+    #background-container { 
+        & #BGG1 { opacity: 1; }
+        & #BGG2 { opacity: 1; }
+        & img { object-fit: cover; }
+    }
+    #navigation-container {
+        display: block;
+        height: 50px;
+        & #content {
+            padding: 2px 0 2px 10px;
+            & #trademark {
+                max-width: 55%;
+                & #logo { margin-top: 0px; height: 32px; width: 32px; }
+                & #text { left: 35px; font-size: 20px; }
+            }
+            & #mobile-container {
+                display: block;
+                & #toggle {
+                    position: absolute;
+                    float: right;
+                    right: 20px;
+                }
+            }
+        }
+    }
 }
 
 /* width */
