--- a/css/text.scss
+++ b/css/text.scss
@@ -265,3 +265,17 @@ table td {
 .c5 {
     color: #AA00AA;
 }
+
+.hover {
+    color: var(--main-color);
+    font-style: italic;
+}
+
+@media only screen and (max-width:700px) {
+    h1 {
+      font-size: 30px;
+    }
+    p {
+        font-size: 10px;
+    }
+}
