--- a/css/text.scss
+++ b/css/text.scss
@@ -234,8 +234,9 @@ ul {
 
 p {
     margin-top: 0px;
-    margin-bottom: 10px;
-    font-size: 20px;
+    //margin-bottom: 10px;
+    padding: 10px;
+    font-size: 17px;
 }
 
 table {
